[package]
name = "lstore-python"
version = "0.1.0"
edition = "2024"

[lib]
name = "lstore_python"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
lru = "0.16.3"
parking_lot = "0.12.5"
pyo3 = { version = "0.28.0", features = ["extension-module", "abi3-py39"] }
rustc-hash = "2.1.1"

[build-dependencies]
pyo3-build-config = "0.28.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
