[package]
name = "firstplace-db"
version = "0.1.0"
edition = "2024"

[lib]
name = "firstplace_db"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
bplustree = { git = "https://github.com/KentBeck/BPlusTree3" }
pyo3 = { version = "0.28.0", features = ["extension-module", "abi3-py39"] }
rustc-hash = "2.1.1"
dashmap = "7.0.0-rc2"
lru = "0.16.3"
parking_lot = { version = "0.12.5", features = ["deadlock_detection"] }
crossbeam-skiplist = "0.1.3"
sanitise-file-name = "1"

[build-dependencies]
pyo3-build-config = "0.28.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

disallowed-types = ["std::collections::HashMap", "std::collections::HashSet", "std::sync::mutex", "std::sync::RwLock"]
