[project]
name = "lstore-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dannykcw", email = "danny.kwong06@gmail.com" },
    { name = "ryanffrench", email = "name@example.com"},
]
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
]

[project.scripts]
lstore = "lstore:main"

[tool.maturin]
module-name = "lstore._core"
python-packages = ["lstore"]
python-source = "python"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
